<resources>
    <string name="app_name">ElectricApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="bandeira">Bandeira</string>
    <string name="Ambientes">Ambientes</string>
    <string name="quarto1">Quarto 1</string>
    <string name="quarto2">Quarto 2</string>
    <string name="sala">Sala</string>
    <string name="banheiro">Banheiro</string>
    <string name="cozinha">Cozinha</string>
    <string name="media">Média</string>
    <string name="historico">Histórico</string>
    <string name="ultimaLeitura">Última leitura</string>
    <string name="valorDoMedidor">Medidor</string>
    <string name="valorAtual">Valor atual</string>
    <string name="kW">kW</string>
    <string name="consumo">Consumo</string>
    <string name="valorAPagar">Valor a pagar</string>
    <string name="atualizar">Atualizar</string>
    <string name="garagem">Garagem</string>
    <string name="ambiente1">Ambiente 1</string>
    <string name="ambiente2">Ambiente 2</string>
    <string name="ambiente3">Ambiente 3</string>
    <string name="ambiente4">Ambiente 4</string>
    <string name="ambiente5">Ambiente 5</string>
    <string name="ambiente6">Ambiente 6</string>
    <string name="continuarConectado">Continuar conectado</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_dados_iniciais">ElectricApp</string>
    <string name="dadosIniciais">Preencha os campos a seguir com os dados da sua última fatuda e com o valor atual marcado no medidor de sua concessionária de energia elétrica.</string>
    <string name="dataUltimaLeitura">Data última leitur: </string>
    <string name="valorUltimaLeitura">Valor última leitura: </string>
    <string name="valorMedidor">Valor medidor: </string>
    <string name="proximaLeitura">Próxima leitura</string>
    <string name="electricApp">ElectricApp</string>
    <string name="consumoMes">Consumo do mês</string>
    <string name="title_activity_consumo_instataneo">Consumo</string>
    <string name="porPeriodo">Por período</string>
    <string name="ok">Ok</string>
    <string name="tempoReal">Tempo real</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>
