<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.electricapp.electricapp.DadosIniciaisActivity"
    tools:showIn="@layout/dados_iniciais_act">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/dadosIniciais"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/customborder"
        android:stretchColumns="0,1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataUltimaLeitura"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/dataUltimaLeitura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ex.:   05/01/2017"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valorUltimaLeitura"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/valorUltimaLeitura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ex.:   21456"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valorMedidor"
                android:layout_marginRight="5dp"/>

            <EditText
                android:id="@+id/valorMedidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="ex.:   21480"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
