<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ConsumoActivity"
    tools:showIn="@layout/app_bar_consumo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/customborder"
            android:stretchColumns="0,2">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ultimaLeitura"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kW"
                    android:gravity="end"/>

                <TextView
                    android:id="@+id/txtUltimaLeitura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proximaLeitura"/>

                <TextView
                    android:id="@+id/txtProximaLeitura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valorAtual"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/kW"/>

                <TextView
                    android:id="@+id/txtConsumoTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:stretchColumns="3">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/flag_36_36"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bandeira_vermelha"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txtValorTarifa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.73"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/medidor_36_36"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumo"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kW"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txtConsumoMes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dinheiro_36_36"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valorAPagar"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/txtValorAPagar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
